compiler/kernc_cli/tests/soundness/reject/specialization/trait_object_method_projection_fake_refl_must_not_infer_assoc.kn
// Calling a trait-object method whose signature returns a projection must keep
// explicit associated bindings on the declaring trait. It must not recover a
// missing binding from a shadowed blanket impl.
// stderr: expected `&TypeIs[&fn(i32, i32) i32, Is = &fn() i32]`

trait TypeIs[T] {
    type Is;
};

impl[S, T] S: TypeIs[T] {
    type Is = T;
}

struct FakeProof[L, R] {
    value: L,
};

impl[L, R] FakeProof[L, R]: TypeIs[R] {
    type Is = L;
}

fn seed() i32 {
    return 11;
}

fn take(value: &TypeIs[&fn(i32, i32) i32, Is = &fn() i32]) &fn() i32 {
    return seed;
}

fn main() i32 {
    let proof = FakeProof[&fn() i32, &fn(i32, i32) i32].{ value: seed };
    let forged = take(proof.&);
    return forged() - 11;
}
